@@ -3,7 +3,7 @@
 //  Linux Music Score Editor
 //  $Id$
 //
-//  Copyright (C) 2007 Werner Schweer and others
+//  Copyright (C) 2007-2011 Werner Schweer and others
 //
 //  This program is free software; you can redistribute it and/or modify
 //  it under the terms of the GNU General Public License version 2.
@@ -37,6 +37,7 @@ Image::Image(Score* s)
       _dirty           = false;
       _lockAspectRatio = true;
       _autoScale       = false;
+      setZ(IMAGE * 100);
       }
 
 //---------------------------------------------------------
